--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
+  "name": "NFT-Marketplace",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/peebaKU/NFT-Marketplace.git",
+  "author": "peebaKU <baramee.254450@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.19"
-  },
-  "dependencies": {
     "dotenv": "^16.4.7",
-    "ethers": "^6.13.5"
+    "ethers": "^6.13.5",
+    "hardhat": "^2.22.19",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
