--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,38 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Production
+build
+client/src/contracts
+client/*/src/contracts
+
+# Testing
+coverage
+
+# Env
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Hardhat files
-/cache
-/artifacts
+# Editor
+.vscode
 
-# TypeChain files
-/typechain
-/typechain-types
+# Misc.
+.DS_Store
 
-# solidity-coverage files
-/coverage
-/coverage.json
-
-# Hardhat Ignition default folder for deployments against a local node
-ignition/deployments/chain-31337
-
-node_modules
-.env
-
-# Hardhat files
-/cache
-/artifacts
-
-# TypeChain files
-/typechain
-/typechain-types
-
-# solidity-coverage files
-/coverage
-/coverage.json
-
-# Hardhat Ignition default folder for deployments against a local node
-ignition/deployments/chain-31337
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+artifacts
+cache
+typechain-types
+typechain
+coverage
+coverage.json
+truffle
